--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,375 @@
-.App {
+:root {
+  /* Colors */
+  --background--color: #111111;
+  --main--primary-color: #fefefe;
+
+  /*Fonts*/
+
+  @font-face {
+    font-family: "modern sans";
+    src: ("/fonts/Moderne Sans Font.ttf");
+  }
+
+  /*Font Size*/
+  --main--font-size: 16px;
+
+  /*Font Weight */
+  --font-weight-normal: 400;
+  --font-weight-bold: 800;
+}
+
+* {
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  color: var(--main--primary-color);
+  padding: 0;
+}
+
+body {
+  background-color: var(--background--color);
+}
+
+h1,
+p,
+span,
+a {
+  color: var(--main--primary-color);
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+.bg {
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  right: -50%;
+  bottom: -50%;
+  width: 200%;
+  height: 200vh;
+  background: transparent url("./media/images/movie.png") repeat 0 0;
+  background-repeat: repeat;
+  animation: bg-animation 0.2s infinite;
+  opacity: 0.9;
+  visibility: visible;
+  z-index: -1;
+}
+
+@keyframes bg-animation {
+  0% {
+    transform: translate(0, 0);
+  }
+  10% {
+    transform: translate(-5%, -5%);
+  }
+  20% {
+    transform: translate(-10%, 5%);
+  }
+  30% {
+    transform: translate(5%, -10%);
+  }
+  40% {
+    transform: translate(-5%, 15%);
+  }
+  50% {
+    transform: translate(-10%, 5%);
+  }
+  60% {
+    transform: translate(15%, 0);
+  }
+  70% {
+    transform: translate(0, 10%);
+  }
+  80% {
+    transform: translate(-15%, 0);
+  }
+  90% {
+    transform: translate(10%, 5%);
+  }
+  100% {
+    transform: translate(5%, 0);
+  }
+}
+
+@keyframes animation-gradient {
+  0% {
+    background-color: var(--main--primary-color);
+  }
+  15% {
+    background-color: #7a5fff;
+  }
+  35% {
+    background-color: #01ff89;
+  }
+  85% {
+    background-color: #7a5fff;
+  }
+  100% {
+    background-color: var(--main--primary-color);
+  }
+}
+
+.sticky {
+  position: sticky;
+  top: 0;
+  left: 0;
+  align-items: center;
+}
+/*NavBar*/
+.menu {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 5.5em;
+}
+
+.logo-image img {
+  width: 4.5em;
+}
+
+.navbar a {
+  font-size: var(--main--font-size);
+  font-weight: 400;
+  margin-right: 15px;
+  font-family: sans-serif;
+  color: var(--main--primary-color);
+  padding-right: 2rem;
+}
+
+.logo-image {
+  margin-right: auto;
+  padding-left: 2rem;
+}
+
+@media screen and (max-width: 50em) {
+  .navbar {
+    display: none;
+  }
+
+  .logo-image {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+  }
+
+  .hero-section {
+    display: flex;
+    flex-direction: row;
+    padding: 0 10%;
+  }
+}
+
+@media (max-width: 25em) {
+  .logo-image {
+    padding: 0;
+  }
+
+  .hero-section,
+  .welcome-section {
+    padding: 0;
+  }
+}
+/*Welcome-section*/
+
+.hero-section  {
+  height: 85vh;
+}
+.welcome-section {
+  padding: 5% 10%;
+  padding-bottom: 12em;
+  color: var(--main--primary-color);
+  margin: 0 auto;
+}
+
+
+.header-font-style {
+  font-size: 4em;
+  color: var(--main--primary-color);
+  font-weight: var(--font-weight-bold);
+}
+
+.welcome-section p {
+  padding-left: 3%;
+  padding-right: 5%;
+  padding-bottom: 1rem;
+  font-size: 1.2em;
+  text-align: left;
+}
+
+@media (max-width: 50em) {
+  .hero-section  {
+    height: 100vh;
+  }
+
+  .welcome-section,
+  .welcome-section h1,
+  .welcome-section p {
+    text-align: center;
+  }
+}
+
+.welcome-section a {
+  color: transparent;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 1px white, 1px 1px 15px white;
+}
+
+.underline {
+  position: relative;
+  display: inline-block;
+  font-size: 1em;
+  font-weight: 400;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 25em) {
+  .project-tile {
+    display: flex;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.underline::after {
+  content: "";
+  position: absolute;
+}
+.welcome-section .contact p {
+  text-align: center;
+  padding-top: 6em;
+}
+
+.contact .underline::after {
+  top: 111%;
+  height: 2px !important;
+  width: 40%;
+  left: 30%;
+  background-color: white;
+  transition: 0.4s ease-out all 0.1s;
+}
+
+.contact:hover .underline::after {
+  width: 100%;
+  left: 2%;
+  transition: 0.5s ease all;
+  animation: animation-gradient 6s linear infinite;
+}
+
+@media (max-width: 50em) {
+  .welcome-section h1 {
+    font-size: 5rem;
+    display: flex;
+    align-content: center;
+  }
+
+  .welcome-section p {
+    font-size: 1.5rem;
+  }
+
+  .contact {
+    padding-bottom: 3vh;
+  }
+}
+
+@media (max-width: 25em) {
+  .contact-me {
+    padding-top: 0;
+  }
+}
+
+/*Work*/
+.projects,
+.contact-me {
+  width: 100%;
+  padding: 0 auto;
+}
+
+.projects h1,
+.contact-me h1 {
+  text-align: center;
+}
+
+.project {
+  width: 80%;
+  margin: 3.5rem auto;
   display: flex;
-  flex-direction: column;
+}
+
+.project-img {
+  width: 100%;
+  height: auto;
+}
+
+.image-container,
+.project-description,
+.contacts {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+}
+
+.project-description,
+.project-text,
+.presentation {
+  flex-direction: row;
+  align-content: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.project-description,
+.presentation {
+  flex-direction: column;
+  padding: 1.5rem;
+}
+.project-description h2 {
+  text-align: center;
+}
+
+.project-tile a {
+  padding: 1.5rem 1.5rem 0 1.5rem;
+}
+
+@media (max-width: 50rem) {
+  .project {
+    flex-direction: column;
+  }
+  .image-container,
+  .project-description {
+    width: 100%;
+    padding: 1rem 0;
+  }
+
+  .project-text p {
+    text-align: center;
+    font-size: 1.2rem;
+  }
+}
+
+.contact-me {
+  padding-top: 5em;
+  padding-bottom: 1.5rem;
+}
+
+.contact-me img {
+  align-content: center;
+  width: 1.1rem;
+  padding-left: 1.5rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.contacts {
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 50em) {
+  .presentation {
+    width: 100%;
+    order: 1;
   }
-  to {
-    transform: rotate(360deg);
+
+  .contacts {
+    width: 100%;
+    order: 2;
   }
 }
