install material react and mobile menu

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: var(--background--color);
 }
@@ -143,15 +147,20 @@ li {
   padding-left: 2rem;
 }
 
+.menu-icon {
+  display: none;
+}
+
 @media screen and (max-width: 50em) {
   .navbar {
     display: none;
   }
+  
 
-  .logo-image {
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0;
+  .menu-icon, .logo-image {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 1rem;
   }
 
   .hero-section {
@@ -173,7 +182,7 @@ li {
 }
 /*Welcome-section*/
 
-.hero-section  {
+.hero-section {
   height: 85vh;
 }
 .welcome-section {
@@ -182,7 +191,6 @@ li {
   color: var(--main--primary-color);
   margin: 0 auto;
 }
-
 
 .header-font-style {
   font-size: 4em;
@@ -199,7 +207,7 @@ li {
 }
 
 @media (max-width: 50em) {
-  .hero-section  {
+  .hero-section {
     height: 100vh;
   }
 
@@ -372,4 +380,12 @@ li {
     width: 100%;
     order: 2;
   }
+}
+
+.mobileMenu {
+  width: 100%;
+  height: 100%;
+  display: block;
+  align-content: center;
+  background-color: white;
 }
